Closed
Bug 967731
Opened 9 years ago
Closed 9 years ago
Regression: MediaPluginHost.cpp does not compile after bug 963621
Categories
(Core :: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
mozilla30
People
(Reporter: ronny.perinke, Assigned: ronny.perinke)
Details
(Keywords: regression)
Attachments
(1 file)
1.94 KB,
patch
|
cajbir
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:28.0) Gecko/20100101 Firefox/28.0 (Beta/Release) Build ID: 20140203202236 Steps to reproduce: changeset 2a7a697f2d88 fails to compile on linux due to a missing import of nsIPropertyBag2.h and an invalid type conversion Actual results: home/sephiroth/building_mozilla/moz-aurora/content/media/plugins/MediaPluginHost.cpp: In function 'bool mozilla::GetSystemInfoString(const char*, char*, size_t)': /home/sephiroth/building_mozilla/moz-aurora/content/media/plugins/MediaPluginHost.cpp:76:12: error: 'nsIPropertyBag2' was not declared in this scope nsCOMPtr<nsIPropertyBag2> infoService = do_GetService("@mozilla.org/system-info;1"); /home/sephiroth/building_mozilla/moz-aurora/content/media/plugins/MediaPluginHost.cpp: At global scope: /home/sephiroth/building_mozilla/moz-aurora/content/media/plugins/MediaPluginHost.cpp:98:1: error: invalid conversion from 'bool (*)(const char*, char*, size_t) {aka bool (*)(const char*, char*, long unsigned int)}' to 'bool (*)(const char*, char*, uint32_t) {aka bool (*)(const char*, char*, unsigned int)}' [-fpermissive] };
Assignee | ||
Updated•9 years ago
|
Assignee | ||
Comment 1•9 years ago
|
||
Assignee | ||
Updated•9 years ago
|
Attachment #8370254 -
Attachment description: fix import and typoe conversion error → fix import and type conversion error
Attachment #8370254 -
Flags: review?(chris.double)
Updated•9 years ago
|
Attachment #8370254 -
Flags: review?(chris.double) → review+
Assignee | ||
Comment 2•9 years ago
|
||
affects windows as well
Comment 3•9 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/000706153103 Thanks for the patch! One request - please make sure that future patches follow the guidelines below to make life easier for those landing on your behalf. Thanks :) https://developer.mozilla.org/en-US/docs/Mercurial_FAQ#How_can_I_generate_a_patch_for_somebody_else_to_check-in_for_me.3F
Assignee: nobody → ronny.perinke
Keywords: checkin-needed
Comment 4•9 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/000706153103
Status: UNCONFIRMED → RESOLVED
Closed: 9 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
You need to log in
before you can comment on or make changes to this bug.
Description
•