Bug 967731 - Fix import and type conversion error from bug 963621. r=doublec