content/media/plugins/MPAPI.h
@@ -135,7 +135,7 @@ struct PluginHost {
   void (*SetMetaDataReadMode)(Decoder *aDecoder);
   void (*SetPlaybackReadMode)(Decoder *aDecoder);
   bool (*GetIntPref)(const char *aPref, int32_t *aResult);
-  bool (*GetSystemInfoString)(const char *aKey, char *aResult, uint32_t aResultLen);
+  bool (*GetSystemInfoString)(const char *aKey, char *aResult, size_t aResultLen);
 };
 
 struct Decoder {
